--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,7 @@
-<h2 id="title">Welcome to Ember</h2>
-
+{{#paper-toolbar class="md-toolbar-tools"}}
+{{#paper-button}}Start{{/paper-button}}
+{{/paper-toolbar}}
+{{#paper-content}}
+<h2 id="title">Welcome to Visual Planner</h2>
+{{/paper-content}}
 {{outlet}}
